# macroData

./: .gitignore  DebugClients.ipynb  LICENSE  README.md  To Do.ipynb  all_data.ipynb  app.py  appComponents.py  dbExplorer.ipynb  dbUtils.py  example.ipynb  main.py  pyproject.toml  requirements.txt
Analyses/: Commodities.ipynb  EU_Macro.py  US_Equities.py  US_Inflation.py  US_Inflation2.py  US_Inflation_Model.py
_aux/: auxFunctions.py  constants.py  dateFunctions.py
_data/: data_specs.json  database.py  manual.csv  monthly_database.csv
macrodata/: __init__.py  auxFunctions.py  constants.py  data_specs.json  database.py  dateFunctions.py  explorer.py  manager.py  manual.csv  modules.py  utils.py
macrodata/_data/: UK_regional_gdp.xlsx  macroDatabase.db  manual.csv
macrodata/analyses/: Brazil_Macro.ipynb  China_Macro.ipynb  Fixed Income.ipynb  US_Macro.ipynb
macrodata/bcb/: client.py
macrodata/bea/: client.py
macrodata/bls/: client.py  utils.py
macrodata/can/: client.py
macrodata/census/: client.py  utils.py
macrodata/clients/: __init__.py  modules.py  utils.py
macrodata/clients/bcb/: __init__.py  client.py  utils.py
macrodata/clients/bea/: utils.py  utils_private.py
macrodata/clients/bls/: client.py  utils_private.py
macrodata/clients/can/: client.py  utils.py
macrodata/eurostat/: client.py  utils.py
macrodata/fed/: utils.py
macrodata/fred/: client.py
macrodata/inegi/: client.py  utils.py
macrodata/logs/: __init__.py  logComponents.py
macrodata/ons/: client.py  utils.py
macrodata/philly/: client.py  utils.py
(+12 files in other folders)
