[tool.poetry]
name = "repl_nix_macroData"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
zeep = "^4.2.0"
matplotlib = "^3.6.2"
numpy = "^1.23.4"
pandas = "^1.5.1"
requests = "^2.28.1"
yfinance = "^0.1.86"
statsmodels = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
